feat: Implement getBalance
