# api-swagger.json
@@ -21,49 +21,51 @@
             "description": ""
           }
         },
-        "tags": ["config"]
+        "tags": [
+          "config"
+        ]
       }
     },
     "/api/account/info/{accountId}": {
       "get": {
         "operationId": "ApiAccountFeatureController_getAccountInfo",
-        "parameters": [
-          {
-            "name": "accountId",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
+        "parameters": [],
         "responses": {
           "200": {
             "description": ""
           }
         },
-        "tags": ["account"]
+        "tags": [
+          "account"
+        ]
+      }
+    },
+    "/api/account/balance/{accountId}": {
+      "get": {
+        "operationId": "ApiAccountFeatureController_getBalance",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "account"
+        ]
       }
     },
     "/api/account/token-accounts/{accountId}": {
       "get": {
         "operationId": "ApiAccountFeatureController_tokenAccounts",
-        "parameters": [
-          {
-            "name": "accountId",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
+        "parameters": [],
         "responses": {
           "200": {
             "description": ""
           }
         },
-        "tags": ["account"]
+        "tags": [
+          "account"
+        ]
       }
     },
     "/api/transaction/service-config": {
@@ -75,7 +77,9 @@
             "description": ""
           }
         },
-        "tags": ["transaction"]
+        "tags": [
+          "transaction"
+        ]
       }
     },
     "/api/transaction/minimum-kin-version": {
@@ -87,7 +91,9 @@
             "description": ""
           }
         },
-        "tags": ["transaction"]
+        "tags": [
+          "transaction"
+        ]
       }
     },
     "/api/transaction/recent-blockhash": {
@@ -99,7 +105,9 @@
             "description": ""
           }
         },
-        "tags": ["transaction"]
+        "tags": [
+          "transaction"
+        ]
       }
     },
     "/api/transaction/minimum-balance-for-rent-exemption/{dataLength}": {
@@ -120,7 +128,9 @@
             "description": ""
           }
         },
-        "tags": ["transaction"]
+        "tags": [
+          "transaction"
+        ]
       }
     },
     "/api/transaction/history": {
@@ -132,7 +142,9 @@
             "description": ""
           }
         },
-        "tags": ["transaction"]
+        "tags": [
+          "transaction"
+        ]
       }
     },
     "/api/transaction/sign-transaction": {
@@ -144,7 +156,9 @@
             "description": ""
           }
         },
-        "tags": ["transaction"]
+        "tags": [
+          "transaction"
+        ]
       }
     },
     "/api/transaction/submit-transaction": {
@@ -156,7 +170,9 @@
             "description": ""
           }
         },
-        "tags": ["transaction"]
+        "tags": [
+          "transaction"
+        ]
       }
     }
   },
